Issue #26129: Deprecated accepting non-integers in grp.getgrgid().